# brooks

./: .gitignore  README.md  brooks.cabal  flake.nix  lambda.cabal  two.lmb
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
nix/: hix.nix
src/: Compiler.hs  Eval.hs  Main.hs  Parser.hs  Repl.hs  VM.hs
