cabal-version:      2.4
name:               brooks
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Trouble-Truffle
maintainer:         perigordtruffle7318@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable brooks
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Parser  
                      Eval
                      Repl

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.15.1.0 && <5
                    , parsec 
                    , containers 
                    , mtl 
                    , microlens 
                    , microlens-th 
                    , haskeline >=0.8.2
                    , process 

    ghc-options: -Wall
    hs-source-dirs:   src
    default-language: Haskell2010
